@@ -1,3 +1,11 @@
+2012-11-07  Andreas Jaeger  <aj@suse.de>
+
+	[BZ #14809]
+	* sysdeps/unix/sysv/linux/sys/sysctl.h (_UAPI_LINUX_KERNEL_H)
+	(_UAPI_LINUX_TYPES_H): Starting with Linux 3.7, the include header
+	guards are changed.  Only define if not yet defined, #undef back
+	after including linux/sysctl.h if defined here.
+
 2012-11-09  Joseph Myers  <joseph@codesourcery.com>
 
 	[BZ #14821]
